# Slador188

./: .gitignore  .gitmodules  LICENSE  README.md
schematics/: .gitignore
schematics/Slador188-v1.0/: Slador188.kicad_pro  Slador188.kicad_sch  fp-lib-table  sym-lib-table
schematics/libraries/Slador/Slador.pretty/: PLCC-68_THT-Corner-Socket.kicad_mod
tutorials/01-Pico_as_IO_device/MultiIO/: CMakeLists.txt  bus_ctrl.pio  config.h  cpu_bus.c  cpu_bus.h  main.c
tutorials/01-Pico_as_IO_device/bios/: CMakeLists.txt  init.asm  main.c  reset.asm  sys_config.inc  text_lcd.asm  text_lcd.h
tutorials/02a-SD_card_test/: CMakeLists.txt  main.c
tutorials/02b-Disk_Controller_test/MultiIO/: CMakeLists.txt  Config.h  DiskCtrlDevice.cpp  DiskCtrlDevice.h  DiskCtrlStatus.h  Doxyfile  FreeRTOSConfig.h  IODevice.h  MultiIO.cpp  MultiIO.h  MultiIODevice.cpp  MultiIODevice.h  OSTask.h  SDCard.cpp  SDCard.h  bus_ctrl.pio  main.cpp
tutorials/02b-Disk_Controller_test/bios/: CMakeLists.txt  device_regs.inc  init.asm  main.c
